Fixed header alignment

--- a/frontend/src/components/Title/Title.module.css
+++ b/frontend/src/components/Title/Title.module.css
@@ -12,6 +12,7 @@
 	font-size: 18pt;
 }
 
-.extra {
+.left,
+.right {
 	position: absolute;
 }
